# bron

./: .gitignore  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yaml  hugo.yaml
configs/: bootstrap.toml  localbron.toml  tool.mypy.toml  tool.ruff.toml
site/: CNAME  go.mod  go.sum  hugo.toml
site/assets/: _custom.scss  _fonts.scss
site/assets/b/: default-poetry.toml  default.toml
site/assets/c/bron/: default.toml
site/assets/c/fonk/: default.toml
site/assets/c/mypy/: default.toml
site/assets/c/poetry/: locktask.toml
site/assets/c/pytest/: default.toml
site/assets/c/ruff/: default.toml
site/assets/c/uv/: locktask.toml
site/content/: _index.md  cli.md
site/content/bootstrap/: default.md  selfhosting.md
site/content/configs/: _index.md  bron.md  fonk.md  mypy.md  poetry.md  pytest.md  ruff.md  uv.md
site/content/configuration/: nosync.md  source.md
site/layouts/partials/docs/: brand.html  html-head-favicon.html
site/layouts/partials/docs/inject/: footer.html
site/layouts/shortcodes/: bron-add.html  bron-bootstrap.html  toml.html
src/bron/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  render.py
src/bron/logic/: checker.py  dependencies.py  erase.py  merge.py  resolve.py  update.py
src/bron/procedures/: add.py  bootstrap.py  dependencies.py  format.py  list.py  locate.py  merge.py  purge.py  remove.py  resolve.py  sync.py
src/bron/resolvers/: path.py  url.py
src/tomly/: __init__.py  __main__.py  cli.py
src/tomly/procedures/: merge.py  merge_dependencies.py  project.py
trail/: base.toml  out.toml  update.toml
