[project]
name = "bron"
version = "0.1.0"
description = "Operational TOML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "packaging>=24.2",
    "pytoml11>=0.0.4",
    "rich>=13.9.4",
]

[project.scripts]
bron = "bron:app"

[tool.uv]
package = true

[tool.bron.source.ruff]
path = "./configs/tool.ruff.toml"

[tool.bron.source.mypy]
path = "./configs/tool.mypy.toml"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["A", "C", "E", "F", "UP", "RUF", "I", "PL", "PTH", "TID252", "SIM"]
ignore = ["E402", "PLR2004", "PLR0913", "RUF001"]
fixable = ["C", "E", "F", "UP", "I", "PL", "RUF", "PTH", "PLC", "TID252", "SIM"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
check_untyped_defs = true
show_column_numbers = true
no_implicit_optional = true
ignore_missing_imports = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.fonk]
default = {command = "all", flags = ["fix"]}
flags = [
    {name = "fix", description = "Fix all fixable issues"},
]

[tool.fonk.command.ruff-check]
type = "uv"
arguments = ["ruff", "check", "src"]
flags = [
    {on = "fix", add = "--fix"},
]

[tool.fonk.command.ruff-format]
type = "uv"
arguments = ["ruff", "format", "src", "--check"]
flags = [
    {on = "fix", remove = "--check"},
]

[tool.fonk.command.mypy]
type = "uv"
arguments = ["mypy", "src"]

[tool.fonk.command.bron]
type = "uv"
arguments = ["bron", "sync", "--check"]
flags = [
    {on = "fix", remove = "--check"},
]

[tool.fonk.alias.all]
commands = ["bron", "ruff-check", "ruff-format", "mypy"]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "ruff>=0.9.2",
]

